Feats: Corrigindo CORS para aceitar o Netlify